--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <body>
     <h1> Rameesha Mehmood </h1>
 
-    <h6> Introduction </h6>
+    <h2> Introduction </h2>
+    <h2>Education</h2>
+    
+
 </body>
 </html>
