--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 
     <h2> Introduction </h2>
     <h2>Education</h2>
-    
+    <ol>
+        <ui>Matriculation 92%</ui>
+        <ui>Fsc 90%</ui>
+        <ui>UET 80.24 agg</ui>
+    </ol>
 
 </body>
 </html>
