--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <li> FSC 90% </li>
         <li> UET 80.24% </li>
     </ol>
-    <a href="https://github.com/rameesha18"> More about me </a>
+    <a href="https://github.com/rameesha18">More about me</a>
 
+    <a href= "./about.html">About Page</a>
 </body>
 </html>
