--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <li> UET 80.24% </li>
     </ol>
     <a href="https://github.com/rameesha18">More about me</a>
-
+    <br/>
     <a href= "./about.html">About Page</a>
+    <br/>
+    <img src="./image/img.jpg"
 </body>
 </html>
