About page updated

--- a/about.html
+++ b/about.html
@@ -5,5 +5,7 @@
 </head>
 <body>
     <h2> About Me </h2>
+    <a href="./index.html"> Home Page </a>
+    <img src="./image/img.jpg" alt="Black Foxi">
 </body>
 </html>
