--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
 </head>
 <body>
     <h1> Rameesha Mehmood </h1>
-
-    <h2> Introduction </h2>
-    <p> Hey there! I'm Rameesha Mehmood. I'm from Gujranwala, Pakistan. I did matriculation from Beaconhouse School System Palm Tree Campus, Gujranwala and earned a silver medal. I did Fsc Pre-engineering from Punjab Group Of Colleges. I'm currently doing my Bachelors in Architectural Engineering from UET Lahore. I've always been fond of public speaking and spoke in various speech competitions and debating tournaments. I won the 1st prize in English Speech Competition back in school. Music is my hobby so i remained part of choir till grade 5. I've always loved sports and partcipated in cricket and basketball tournaments back in school. I won one-night book challenge as well and participated in various activities conducted by the school library. Mystery, classics and history have always been my favourite genres. I also wrote in the news letter "THE BEACONHOUSE TIMES". </p>
-    <h2>Education</h2>
-    <ol>
-        <li> Matriculation 90% </li>
-        <li> FSC 90% </li>
-        <li> UET 80.24% </li>
-    </ol>
-    <a href="https://github.com/rameesha18">More about me</a>
-    <br/>
-    <a href= "./about.html">About Page</a>
-    <br/>
-    <img src="./image/img.jpg"
-</body>
+        <h2> Introduction </h2>
+        <p> Hey there! I'm Rameesha Mehmood. I'm from Gujranwala, Pakistan. I did matriculation from Beaconhouse School System Palm Tree Campus, Gujranwala and earned a silver medal. I did Fsc Pre-engineering from Punjab Group Of Colleges. I'm currently doing my Bachelors in Architectural Engineering from UET Lahore. I've always been fond of public speaking and spoke in various speech competitions and debating tournaments. I won the 1st prize in English Speech Competition back in school. Music is my hobby so i remained part of choir till grade 5. I've always loved sports and partcipated in cricket and basketball tournaments back in school. I won one-night book challenge as well and participated in various activities conducted by the school library. Mystery, classics and history have always been my favourite genres. I also wrote in the news letter "THE BEACONHOUSE TIMES". </p>
+        <h2>Education</h2>
+        <ol>
+            <li> Matriculation 90% </li>
+            <li> FSC 90% </li>
+            <li> UET 80.24% </li>
+        </ol>
+        <div>
+        <a href="https://github.com/rameesha18">More about me</a>
+        <br/>
+        <a href= "./about.html">About Page</a>
+        <br/>
+        </div>
+        <img src="./image/img.jpg"> 
+    </body>
 </html>
